[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiobsidian"
version = "0.1.0"
description = "Async Python client for Obsidian Local REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "kudato" }]
keywords = ["obsidian", "async", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/kudato/aiobsidian"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
