[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiobsidian"
version = "0.1.0"
description = "Async Python client for Obsidian Local REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "kudato" }]
keywords = ["obsidian", "async", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/kudato/aiobsidian"
Documentation = "https://kudato.github.io/aiobsidian"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx", "respx.*"]
ignore_missing_imports = true
