[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiobsidian"
version = "0.4.0"
description = "Async Python client for Obsidian CLI and Local REST API plugin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "kudato" }]
keywords = ["obsidian", "async", "api", "cli", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
cli = []
rest = ["httpx>=0.28"]
all = ["httpx>=0.28"]

[project.urls]
Repository = "https://github.com/kudato/aiobsidian"
Documentation = "https://kudato.github.io/aiobsidian"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx", "respx.*"]
ignore_missing_imports = true
